--- a/Home/index.html
+++ b/Home/index.html
@@ -4,22 +4,29 @@
     <head>
         <title>Happy Valley Kennels</title>
         <link rel="stylesheet" type="text/css" href="../Skeleton.css">
+        <link rel="stylesheet" type="text/css" href="Home.css">
     </head>
     <body>
-
-        <h1>Future Homepage of the Happy Valley Kennels Website</h1>
-        <p>But for now there is nothing.</p>
+        <div id="Page-Header">
+            <a href="../Home">Happy Valley Kennels</a>
+        </div>
 
         <ul id="Nav-Bar">
             <li><a class="active" href="../Home">Home</a></li>
             <li><a href="../About">About</a></li>
             <li><a href="../FAQ">FAQ</a></li>
             <li><a href="../Contact">Contact</a></li>
-            <li id="Profile-Button"><button>Profile</button></li>
+            <li id="Profile-Button"><a href="../Profile">Profile</a></li>
         </ul>
 
+        <!-- Content of this div should be unique to each page -->
         <div id="Page-Content">
             <p>This is the rest of the page's content</p>
+        </div>
+
+        <hr>
+        <div id="Page-Footer">
+            <object type="image/svg+xml" data="../assets/HappyValleyLogo.svg" width="100" height="100"></object>
         </div>
 
     </body>
