--- a/Home/index.html
+++ b/Home/index.html
@@ -22,10 +22,11 @@
         <!-- Content of this div should be unique to each page -->
         <div id="Page-Content">
             <p>This is the rest of the page's content</p>
+            <p>There should be stuff here, but currently there is none</p>
         </div>
 
-        <hr>
         <div id="Page-Footer">
+            <hr>
             <object type="image/svg+xml" data="../assets/HappyValleyLogo.svg" width="100" height="100"></object>
         </div>
 
