Add Page Footer

--- a/Home/index.html
+++ b/Home/index.html
@@ -27,7 +27,11 @@
 
         <div id="Page-Footer">
             <hr>
-            <object type="image/svg+xml" data="../assets/HappyValleyLogo.svg" width="100" height="100"></object>
+            <div id="Footer-Content">
+                <object type="image/svg+xml" data="../assets/HappyValleyLogo.svg" width="100" height="100"></object>
+                <p>Happy Valley Kennels</p>
+                <a href="../Contact">Contact</a>
+            </div>
         </div>
 
     </body>
