--- a/Home/index.html
+++ b/Home/index.html
@@ -7,27 +7,27 @@
         <link rel="stylesheet" type="text/css" href="Home.css">
     </head>
     <body>
-        <div id="Page-Header">
+        <div id="Page_Header">
             <a href="../Home">Happy Valley Kennels</a>
         </div>
 
-        <ul id="Nav-Bar">
+        <ul id="Nav_Bar">
             <li><a class="active" href="../Home">Home</a></li>
             <li><a href="../About">About</a></li>
             <li><a href="../FAQ">FAQ</a></li>
             <li><a href="../Contact">Contact</a></li>
-            <li id="Profile-Button"><a href="../Profile">Profile</a></li>
+            <li id="Profile_Button"><a href="../Profile">Profile</a></li>
         </ul>
 
         <!-- Content of this div should be unique to each page -->
-        <div id="Page-Content">
+        <div id="Page_Content">
             <p>This is the rest of the page's content</p>
             <p>There should be stuff here, but currently there is none</p>
         </div>
 
-        <div id="Page-Footer">
+        <div id="Page_Footer">
             <hr>
-            <div id="Footer-Content">
+            <div id="Footer_Content">
                 <object type="image/svg+xml" data="../assets/HappyValleyLogo.svg" width="100" height="100"></object>
                 <p>Happy Valley Kennels</p>
                 <a href="../Contact">Contact</a>
