Add bases for other pages

--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -12,9 +12,9 @@
         </div>
 
         <ul id="Nav_Bar">
-            <li><a class="active" href="../Home">Home</a></li>
+            <li><a href="../Home">Home</a></li>
             <li><a href="../About">About</a></li>
-            <li><a href="../FAQ">FAQ</a></li>
+            <li><a class="active" href="../FAQ">FAQ</a></li>
             <li><a href="../Contact">Contact</a></li>
             <li id="Profile_Button"><a href="../Profile">Profile</a></li>
         </ul>
