--- a/About/index.html
+++ b/About/index.html
@@ -12,8 +12,8 @@
         </div>
 
         <ul id="Nav_Bar">
-            <li><a class="active" href="../Home">Home</a></li>
-            <li><a href="../About">About</a></li>
+            <li><a href="../Home">Home</a></li>
+            <li><a class="active" href="../About">About</a></li>
             <li><a href="../FAQ">FAQ</a></li>
             <li><a href="../Contact">Contact</a></li>
             <li id="Profile_Button"><a href="../Profile">Profile</a></li>
