Remove generic starter content.

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -21,8 +21,7 @@
 
         <!-- Content of this div should be unique to each page -->
         <div id="Page_Content">
-            <p>This is the rest of the page's content</p>
-            <p>There should be stuff here, but currently there is none</p>
+            <p>This page would contain contact information for the Kennel.</p>
         </div>
 
         <div id="Page_Footer">
