--- a/Profile/index.html
+++ b/Profile/index.html
@@ -14,14 +14,14 @@
         <ul id="Nav_Bar">
             <li><a href="../Home">Home</a></li>
             <li><a href="../About">About</a></li>
-            <li><a class="active" href="../FAQ">FAQ</a></li>
+            <li><a href="../FAQ">FAQ</a></li>
             <li><a href="../Contact">Contact</a></li>
-            <li id="Profile_Button"><a href="../Profile">Profile</a></li>
+            <li id="Profile_Button"  class="active"><a href="../Profile">Profile</a></li>
         </ul>
 
         <!-- Content of this div should be unique to each page -->
         <div id="Page_Content">
-            <p>This page would answer Frequently Asked Questions, but none have been asked.</p>
+            <p>Users come to this page to sign in or sign up.</p>
         </div>
 
         <div id="Page_Footer">
