Add some content to home page

--- a/Home/index.html
+++ b/Home/index.html
@@ -20,9 +20,17 @@
         </ul>
 
         <!-- Content of this div should be unique to each page -->
+        
         <div id="Page_Content">
-            <p>This is the rest of the page's content</p>
-            <p>There should be stuff here, but currently there is none</p>
+            <div id="row-1">
+                <div>
+                    <img id="Home_Image_1" src="../assets/images/labrador-retriever-1210559_960_720.jpg">
+                    <!-- Note: Add image credit: "https://pixabay.com/photos/labrador-retriever-dog-pet-1210559/" -->
+                </div>
+                <div>
+                    <p>We are <span id="Happy_Valley_Emphasized">Happy Valley Kennels</span>...</p>
+                </div>
+            </div>
         </div>
 
         <div id="Page_Footer">
